<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:icon="?attr/actionModeCloseDrawable">

    <PreferenceCategory
        android:title="@string/nodeSettings"
        android:textSize = "24sp">

    <EditTextPreference
        android:key="NodeID"
        android:defaultValue="@string/defaultNodeID"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="NodeID" />
    <EditTextPreference
        android:key="hubAddress"
        android:defaultValue="@string/defaultHubIP"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Hub Address" />
    <EditTextPreference
        android:key="Port"
        android:defaultValue="@string/defaultPort"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="UDP Port" />
    <EditTextPreference
        android:key="sampleFrequency"
        android:defaultValue="@string/defaultSample_Freq"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Sensor Sampling Frequency (ms)" />
    <EditTextPreference
        android:key="reportFrequency"
        android:defaultValue="@string/defaultReport_Freq"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Node Reporting Rate (ms)" />
    </PreferenceCategory>

</PreferenceScreen>